# CSE335Project2

./: CMakeLists.txt  SilentFilm.anim
CanadianExperienceLib/: CMakeLists.txt  Drawable.h  MachineAdapter.cpp  MachineAdapter.h  MachineDrawableFactory.cpp  MachineDrawableFactory.h  MainFrame.cpp  Picture.cpp  Picture.h  PictureFactory.cpp  ViewEdit.cpp  ViewEdit.h
MachineLib/: ActualMachine.cpp  ActualMachine.h  Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  Cylinder.cpp  Cylinder.h  FunctionalMachine.cpp  FunctionalMachine.h  Gear.cpp  Gear.h  Lever.cpp  Lever.h  MachineFactory.cpp  MachineOneFactory.cpp  MachineOneFactory.h  MachineTwoFactory.cpp  MachineTwoFactory.h  Motor.cpp  Motor.h  Negotiator.cpp  Negotiator.h  Piston.cpp  Piston.h  RectangularComponent.cpp  RectangularComponent.h  Rod.cpp  Rod.h  RodSink.cpp  RodSink.h  RotationalSink.cpp  RotationalSink.h  RotationalSource.cpp  RotationalSource.h  Shape.cpp  Shape.h  Sink.cpp  Sink.h  (+4 more)
MachineTests/: CMakeLists.txt
Tests/: CMakeLists.txt
resources/xrc/: main.fbp  main.xrc
